Favicon and logout

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="/web/res/favicon.png" />
     <title>Library Organizer</title>
 </head>
 <body>
